--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#catagoris-1">Product</a>
+                        <a class="nav-link" href="#catagoris-1">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#backpacks">Backpack</a>
